weather block & weather data page with results

--- a/src/blocks/Blocks.astro
+++ b/src/blocks/Blocks.astro
@@ -10,6 +10,7 @@ import TextBlock from './TextBlock/TextBlock.astro';
 import TextImageBlock from './TextImageBlock/TextImageBlock.astro';
 import VideoBlock from './VideoBlock/VideoBlock.astro';
 import VideoEmbedBlock from './VideoEmbedBlock/VideoEmbedBlock.astro';
+import WeatherBlock from './WeatherBlock/WeatherBlock.astro';
 import GroupingBlock from './GroupingBlock/GroupingBlock.astro';
 
 const blocksByTypename = {
@@ -23,6 +24,7 @@ const blocksByTypename = {
   VideoBlockRecord: VideoBlock,
   VideoEmbedBlockRecord: VideoEmbedBlock,
   GroupingBlockRecord: GroupingBlock,
+  WeatherBlockRecord: WeatherBlock,
 };
 
 interface Props {
