--- a/src/components/AppLogo/AppLogo.astro
+++ b/src/components/AppLogo/AppLogo.astro
@@ -2,10 +2,14 @@
 import { t } from '@lib/i18n';
 import { getHomeHref } from '@lib/routing';
 import { siteName } from '@lib/seo';
+import IconButton from '@components/IconButton/IconButton.astro';
+
 ---
 
 <a
   rel="home"
   href={getHomeHref()}
-  aria-label={t('go_to_home_page', { siteName: siteName() })}>[Logo]</a
+  aria-label={t('go_to_home_page', { siteName: siteName() })}>    
+  <IconButton icon="weather" label='Home'  />
+</a
 >
