--- a/src/pages/[locale]/weather-data.astro
+++ b/src/pages/[locale]/weather-data.astro
@@ -1,12 +1,24 @@
 ---
-
+import { locales } from '@lib/i18n';
 import { queryParamName } from '@lib/searchCity';
 import WeatherResults from '@components/WeatherResults.astro';
+import { noIndexTag, titleTag } from '@lib/seo';
+import Layout from '@layouts/Default.astro';
 
+export const prerender = false;
 const query = new URL(Astro.request.url).searchParams.get(queryParamName) || '';
-
+const pageTitle = 'Weather Data';
+const getPathWithQuery = () =>
+  '/en/weather-data/' + (query ? `?${queryParamName}=${query}` : '');
+const pageUrls = locales.map((locale) => ({
+  locale,
+  pathname: getPathWithQuery(),
+}));
 ---
-<h1>Weather</h1>
-<section>
-  <WeatherResults query={query} />
-</section>
+
+<Layout pageUrls={pageUrls} seoMetaTags={[noIndexTag, titleTag(pageTitle)]}>
+  <h1>Weather</h1>
+  <section>
+    <WeatherResults query={query} />
+  </section>
+</Layout>
